<resources>
    <string name="app_name">GitHub Mates</string>
    <string name="repositories">Repositories</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="back_button">Back Button</string>
    <string name="share_button">Share Button</string>
    <string name="search">Search username</string>
    <string name="discover_github_mates">Discover GitHub Mates</string>
    <string name="language_settings">Language Settings</string>
    <string name="reminder_settings">Reminder Setting</string>
    <string name="username">\@%1$s</string>
    <string name="member_since">Member since %1$s</string>
    <string name="open_web_profile">Open web profile</string>
    <string name="username_not_found">Username not found</string>
    <string name="no_followers">No Followers</string>
    <string name="no_user_followed">No user followed</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="remove_favorite_button">Remove from favorite Button</string>
    <string name="favorite_users">Favorite Users</string>
    <string name="there_are_no_favorite_users_yet">There are no favorite users yet</string>
    <string name="user_added_to_favorite">User added to favorites</string>
    <string name="user_removed_from_favorite">User removed from favorites</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="reminder_every_09_00_am">Reminder every 09.00 AM to return to the application</string>
    <string name="daily_reminder_activated">Daily reminder have been activated</string>
    <string name="daily_reminder_removed">Daily reminder have been removed</string>
    <string name="find_out_awesome_developers">Find out awesome developers on GitHubMates</string>
    <string name="favorite_github_users">My Favorite GitHub Users</string>
</resources>