<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <RelativeLayout
        android:id="@+id/layout_action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:focusableInTouchMode="true"
        android:paddingBottom="@dimen/dimen_4dp">

        <TextView
            android:id="@+id/tv_app_title"
            style="@style/TextContent.Bold"
            android:layout_alignEnd="@id/btn_bookmark_favorite"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/dimen_16dp"
            android:gravity="start"
            android:text="@string/discover_github_mates"
            android:textColor="@color/white"
            android:textSize="@dimen/text_20sp" />

        <ImageButton
            android:id="@+id/btn_bookmark_favorite"
            style="@style/ImageButtonGeneral"
            android:layout_marginTop="@dimen/dimen_12dp"
            android:layout_toStartOf="@id/btn_setting"
            android:contentDescription="@string/share_button"
            android:src="@drawable/ic_baseline_bookmark_24" />

        <ImageButton
            android:id="@+id/btn_setting"
            style="@style/ImageButtonGeneral"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/dimen_12dp"
            android:layout_marginEnd="@dimen/dimen_8dp"
            android:contentDescription="@string/share_button"
            android:src="@drawable/ic_baseline_settings_24" />

        <SearchView
            android:id="@+id/edt_search"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_44dp"
            android:layout_below="@id/tv_app_title"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_white_rounded"
            android:elevation="4dp"
            android:fontFamily="@font/gordita_regular"
            android:iconifiedByDefault="false"
            android:queryBackground="@android:color/transparent"
            android:queryHint="@string/search" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_not_found"
        android:layout_width="@dimen/dimen_110dp"
        android:layout_height="@dimen/dimen_110dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/username_not_found"
        android:src="@drawable/ic_img_not_found"
        android:translationZ="90dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_not_found"
        style="@style/TextContent.Bold"
        android:layout_below="@id/iv_not_found"
        android:layout_centerHorizontal="true"
        android:text="@string/username_not_found"
        android:textSize="@dimen/text_18sp"
        android:translationZ="90dp"
        android:visibility="gone" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/list_user_shimmer_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_action_bar"
        android:layout_gravity="center"
        android:orientation="vertical"
        shimmer:shimmer_duration="1300">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/placeholder_list_user" />

            <include layout="@layout/placeholder_list_user" />

            <include layout="@layout/placeholder_list_user" />

            <include layout="@layout/placeholder_list_user" />

            <include layout="@layout/placeholder_list_user" />
        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_action_bar"
        tools:listitem="@layout/item_list_users" />

</RelativeLayout>